--- a/EgitimPlatformuAI/Views/ResetPasswordScreen/ResetPassword.storyboard
+++ b/EgitimPlatformuAI/Views/ResetPasswordScreen/ResetPassword.storyboard
@@ -39,7 +39,7 @@
                                 <color key="textColor" name="softBlue"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Email" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="XLA-AW-458">
+                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="New password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="XLA-AW-458">
                                 <rect key="frame" x="20" y="265" width="353" height="60"/>
                                 <color key="backgroundColor" name="softBlue"/>
                                 <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -65,7 +65,7 @@
                                     <action selector="resetPassword:" destination="Y6W-OH-hqX" eventType="touchUpInside" id="nGR-Zn-epu"/>
                                 </connections>
                             </button>
-                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Email" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="yOk-Ms-Lz9">
+                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Confirm Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="yOk-Ms-Lz9">
                                 <rect key="frame" x="20" y="335" width="353" height="60"/>
                                 <color key="backgroundColor" name="softBlue"/>
                                 <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -77,10 +77,18 @@
                                 <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="16"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="kRg-Ve-XIU" customClass="PasswordRulesView" customModule="EgitimPlatformuAI" customModuleProvider="target">
+                                <rect key="frame" x="20" y="490" width="353" height="150"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="150" id="Dgl-hQ-OuA"/>
+                                </constraints>
+                            </view>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="vDu-zF-Fre"/>
                         <color key="backgroundColor" name="charcoal"/>
                         <constraints>
+                            <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="kRg-Ve-XIU" secondAttribute="trailing" constant="20" id="8Fp-v8-yMy"/>
                             <constraint firstItem="WCu-74-e3V" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="20" id="BrF-SO-fwa"/>
                             <constraint firstItem="yOk-Ms-Lz9" firstAttribute="top" secondItem="XLA-AW-458" secondAttribute="bottom" constant="10" id="EiA-9V-pEW"/>
                             <constraint firstItem="WCu-74-e3V" firstAttribute="top" secondItem="v97-ZD-kN9" secondAttribute="bottom" constant="20" id="F3i-ar-Yfs"/>
@@ -89,12 +97,14 @@
                             <constraint firstItem="v97-ZD-kN9" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="20" id="OHV-JU-c6y"/>
                             <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="XLA-AW-458" secondAttribute="trailing" constant="20" id="PL2-Pf-XZ8"/>
                             <constraint firstItem="v97-ZD-kN9" firstAttribute="top" secondItem="vDu-zF-Fre" secondAttribute="top" id="Ral-JO-EID"/>
+                            <constraint firstItem="kRg-Ve-XIU" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="20" id="Rc9-zJ-K0h"/>
                             <constraint firstItem="XLA-AW-458" firstAttribute="top" secondItem="0YZ-O0-v3z" secondAttribute="bottom" constant="40" id="YD1-l3-hfR"/>
                             <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="WCu-74-e3V" secondAttribute="trailing" constant="20" id="b9Z-MO-8pk"/>
                             <constraint firstItem="0YZ-O0-v3z" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="20" id="bXW-DZ-x9j"/>
                             <constraint firstItem="yOk-Ms-Lz9" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="20" id="bat-8u-Qhe"/>
                             <constraint firstItem="8Cx-MG-2s8" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="20" id="c58-ok-YXB"/>
                             <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="yOk-Ms-Lz9" secondAttribute="trailing" constant="20" id="ddR-IK-9aL"/>
+                            <constraint firstItem="kRg-Ve-XIU" firstAttribute="top" secondItem="8Cx-MG-2s8" secondAttribute="bottom" constant="20" id="eYo-hm-DE3"/>
                             <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="8Cx-MG-2s8" secondAttribute="trailing" constant="20" id="gub-fG-dCd"/>
                             <constraint firstItem="8Cx-MG-2s8" firstAttribute="top" secondItem="yOk-Ms-Lz9" secondAttribute="bottom" constant="20" id="ipf-GI-lqE"/>
                             <constraint firstItem="0YZ-O0-v3z" firstAttribute="top" secondItem="WCu-74-e3V" secondAttribute="bottom" constant="20" id="tXy-0X-bcY"/>
@@ -103,6 +113,7 @@
                     <connections>
                         <outlet property="backButton" destination="v97-ZD-kN9" id="LmT-BA-qGJ"/>
                         <outlet property="confirmPasswordTextField" destination="yOk-Ms-Lz9" id="EVs-Wp-EIV"/>
+                        <outlet property="passwordRulesView" destination="kRg-Ve-XIU" id="Cth-WO-96v"/>
                         <outlet property="passwordTextField" destination="XLA-AW-458" id="P7T-AU-OC6"/>
                         <outlet property="resetPasswordButton" destination="8Cx-MG-2s8" id="Kro-i7-zDz"/>
                     </connections>
