--- a/EgitimPlatformuAI/Views/ListeningScreen/ListeningScreen.storyboard
+++ b/EgitimPlatformuAI/Views/ListeningScreen/ListeningScreen.storyboard
@@ -28,7 +28,7 @@
                                 </constraints>
                             </view>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Listens Left: 3" textAlignment="right" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ceb-tt-iXm">
-                                <rect key="frame" x="219.66666666666663" y="69" width="153.33333333333337" height="30"/>
+                                <rect key="frame" x="201.66666666666663" y="69" width="171.33333333333337" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="LRE-l0-hrf"/>
                                 </constraints>
@@ -151,14 +151,14 @@
                                     <constraint firstAttribute="height" constant="150" id="20L-b2-pVq"/>
                                 </constraints>
                             </view>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Soru" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7kG-mN-sf6">
-                                <rect key="frame" x="178.66666666666666" y="69" width="36" height="30"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7kG-mN-sf6">
+                                <rect key="frame" x="196.66666666666666" y="69" width="0.0" height="30"/>
                                 <color key="tintColor" name="royalBlue"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="gUO-kW-Vjf"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" systemColor="systemOrangeColor"/>
+                                <color key="textColor" name="summer"/>
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
@@ -231,11 +231,11 @@
         <namedColor name="royalBlue">
             <color red="0.29019607843137257" green="0.3843137254901961" blue="0.77254901960784317" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
+        <namedColor name="summer">
+            <color red="0.94117647058823528" green="0.73333333333333328" blue="0.47058823529411764" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
         <systemColor name="systemGreenColor">
             <color red="0.20392156859999999" green="0.78039215689999997" blue="0.34901960780000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-        </systemColor>
-        <systemColor name="systemOrangeColor">
-            <color red="1" green="0.58431372550000005" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
