--- a/EgitimPlatformuAI/Views/WritingScreen/WritingScreen.storyboard
+++ b/EgitimPlatformuAI/Views/WritingScreen/WritingScreen.storyboard
@@ -56,7 +56,7 @@
                                                                         <nil key="highlightedColor"/>
                                                                     </label>
                                                                 </subviews>
-                                                                <color key="backgroundColor" name="charcoal"/>
+                                                                <color key="backgroundColor" name="darkBlue"/>
                                                                 <constraints>
                                                                     <constraint firstAttribute="height" constant="297" id="Dij-es-4JF"/>
                                                                     <constraint firstItem="xDl-UN-5LX" firstAttribute="leading" secondItem="hSq-mE-jQg" secondAttribute="leading" constant="10" id="HQR-Q1-0gQ"/>
@@ -91,7 +91,7 @@
                                                                                         <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                                                                                     </textView>
                                                                                 </subviews>
-                                                                                <color key="backgroundColor" name="charcoal"/>
+                                                                                <color key="backgroundColor" name="darkBlue"/>
                                                                                 <constraints>
                                                                                     <constraint firstItem="uOg-wG-fBb" firstAttribute="top" secondItem="jKP-Cj-woj" secondAttribute="top" constant="10" id="BZm-hV-rUC"/>
                                                                                     <constraint firstAttribute="trailing" secondItem="uOg-wG-fBb" secondAttribute="trailing" constant="10" id="CT2-mk-Rex"/>
@@ -154,13 +154,6 @@
                                                             <action selector="checkButton:" destination="Y6W-OH-hqX" eventType="touchUpInside" id="nQg-k2-4XD"/>
                                                         </connections>
                                                     </button>
-                                                    <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ihm-Em-Oin" customClass="CustomContinueView" customModule="EgitimPlatformuAI" customModuleProvider="target">
-                                                        <rect key="frame" x="0.0" y="624" width="393" height="150"/>
-                                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                                        <constraints>
-                                                            <constraint firstAttribute="height" constant="150" id="QkG-up-ETz"/>
-                                                        </constraints>
-                                                    </view>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="euP-we-Ccb">
                                                         <rect key="frame" x="196.66666666666666" y="10" width="0.0" height="30"/>
                                                         <constraints>
@@ -178,18 +171,15 @@
                                                     <constraint firstItem="Cs3-x1-3nS" firstAttribute="leading" secondItem="aLL-i7-V7P" secondAttribute="leading" id="8Ha-fV-Lrp"/>
                                                     <constraint firstItem="1Od-JH-yLa" firstAttribute="leading" secondItem="aLL-i7-V7P" secondAttribute="leading" constant="20" id="969-KN-sBV"/>
                                                     <constraint firstAttribute="trailing" secondItem="Cs3-x1-3nS" secondAttribute="trailing" id="Gbn-r2-9kZ"/>
-                                                    <constraint firstAttribute="trailing" secondItem="ihm-Em-Oin" secondAttribute="trailing" id="Me1-oF-ym3"/>
                                                     <constraint firstItem="Cs3-x1-3nS" firstAttribute="top" secondItem="R9a-sv-Phs" secondAttribute="bottom" constant="15" id="PKN-gp-S9L"/>
                                                     <constraint firstItem="A65-Ey-Ief" firstAttribute="top" secondItem="Cs3-x1-3nS" secondAttribute="bottom" constant="30" id="ZXY-3j-Jcp"/>
                                                     <constraint firstItem="A65-Ey-Ief" firstAttribute="leading" secondItem="aLL-i7-V7P" secondAttribute="leading" constant="30" id="bbQ-FC-QSY"/>
                                                     <constraint firstItem="R9a-sv-Phs" firstAttribute="top" secondItem="1Od-JH-yLa" secondAttribute="bottom" constant="15" id="cBP-j5-DI1"/>
-                                                    <constraint firstAttribute="bottom" secondItem="ihm-Em-Oin" secondAttribute="bottom" id="ely-2G-77x"/>
                                                     <constraint firstAttribute="trailing" secondItem="R9a-sv-Phs" secondAttribute="trailing" id="gqc-6W-wci"/>
                                                     <constraint firstItem="R9a-sv-Phs" firstAttribute="leading" secondItem="aLL-i7-V7P" secondAttribute="leading" constant="15" id="j6A-LL-xmt"/>
                                                     <constraint firstAttribute="trailing" secondItem="A65-Ey-Ief" secondAttribute="trailing" constant="30" id="oBO-8S-0Bc"/>
                                                     <constraint firstItem="1Od-JH-yLa" firstAttribute="top" secondItem="aLL-i7-V7P" secondAttribute="top" id="s28-Qm-ibP"/>
                                                     <constraint firstItem="euP-we-Ccb" firstAttribute="centerX" secondItem="aLL-i7-V7P" secondAttribute="centerX" id="uR6-3k-1qD"/>
-                                                    <constraint firstItem="ihm-Em-Oin" firstAttribute="leading" secondItem="aLL-i7-V7P" secondAttribute="leading" id="vYI-cO-dDS"/>
                                                 </constraints>
                                             </view>
                                         </subviews>
@@ -213,20 +203,30 @@
                                 <viewLayoutGuide key="contentLayoutGuide" id="7WM-2T-Rnk"/>
                                 <viewLayoutGuide key="frameLayoutGuide" id="pC9-w1-mEX"/>
                             </scrollView>
+                            <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="KLJ-xU-Q3w" customClass="CustomContinueView" customModule="EgitimPlatformuAI" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="702" width="393" height="150"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="150" id="1bB-ac-8ai"/>
+                                </constraints>
+                            </view>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="vDu-zF-Fre"/>
                         <color key="backgroundColor" name="backDarkBlue"/>
                         <constraints>
                             <constraint firstAttribute="bottom" secondItem="f1R-cf-qpm" secondAttribute="bottom" id="4IE-b4-8RL"/>
+                            <constraint firstAttribute="bottom" secondItem="KLJ-xU-Q3w" secondAttribute="bottom" id="AgE-B0-q9f"/>
                             <constraint firstItem="f1R-cf-qpm" firstAttribute="top" secondItem="vDu-zF-Fre" secondAttribute="top" id="cc7-zQ-h0Y"/>
                             <constraint firstItem="f1R-cf-qpm" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" id="erK-6F-kq9"/>
                             <constraint firstItem="f1R-cf-qpm" firstAttribute="trailing" secondItem="vDu-zF-Fre" secondAttribute="trailing" id="gGC-EA-xkA"/>
+                            <constraint firstItem="KLJ-xU-Q3w" firstAttribute="trailing" secondItem="vDu-zF-Fre" secondAttribute="trailing" id="n4O-fz-J6t"/>
+                            <constraint firstItem="KLJ-xU-Q3w" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" id="v0w-EC-Z23"/>
                         </constraints>
                     </view>
                     <connections>
                         <outlet property="backButton" destination="1Od-JH-yLa" id="ztV-oJ-eYs"/>
                         <outlet property="checkButton" destination="A65-Ey-Ief" id="r4n-3A-MKO"/>
-                        <outlet property="continueButton" destination="ihm-Em-Oin" id="S14-JH-B8A"/>
+                        <outlet property="continueButton" destination="KLJ-xU-Q3w" id="EaA-3Y-3aO"/>
                         <outlet property="exampleLabel" destination="xDl-UN-5LX" id="rNr-Mu-Yoi"/>
                         <outlet property="exampleLabelView" destination="hSq-mE-jQg" id="qJF-WO-FG5"/>
                         <outlet property="questionCount" destination="euP-we-Ccb" id="NaX-n5-ymv"/>
@@ -244,8 +244,8 @@
         <namedColor name="backDarkBlue">
             <color red="0.10588235294117647" green="0.12549019607843137" blue="0.15686274509803921" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
-        <namedColor name="charcoal">
-            <color red="0.17254901960784313" green="0.20000000000000001" blue="0.24705882352941178" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        <namedColor name="darkBlue">
+            <color red="0.11764705882352941" green="0.13725490196078433" blue="0.17254901960784313" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
         <namedColor name="porcelain">
             <color red="0.96862745098039216" green="0.97254901960784312" blue="0.97647058823529409" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
